<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="false"
    android:foregroundGravity="right"
    tools:context="com.gmail.efarrisdevelopment.usa.sleeptimer.MainActivity">

    <TextView
        android:id="@+id/minuteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/minuteTextBox"
        app:layout_constraintStart_toEndOf="@+id/minuteTextBox"
        app:layout_constraintTop_toTopOf="@+id/minuteTextBox"
        app:layout_constraintVertical_bias="0.571" />

    <EditText
        android:id="@+id/minuteTextBox"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="1"
        android:ems="10"
        android:hint="@string/timeEditViewHint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:tooltipText="@string/timerHelperMessage"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/sleepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="clickSleepTimer"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/sleepButton"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/minuteText"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/minuteTextBox"
        app:layout_constraintTop_toBottomOf="@+id/minuteTextBox" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/turnPhoneOffIn"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/AlarmRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeTimerText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activeTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/active_timer"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quickTimer1" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancelSleepTimer"
        android:text="@string/cancel_text"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/maAdView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noAlarmView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_alarm"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/AlarmRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AlarmRecyclerView" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/maAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    <TextView
        android:id="@+id/quickLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/quickTimerLabel"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@+id/activeTimerText"
        app:layout_constraintTop_toBottomOf="@+id/sleepButton" />

    <Button
        android:id="@+id/quickTimer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="clickQuickTimer"
        android:text="@string/notSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quickLabel" />

    <Button
        android:id="@+id/quickTimer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickQuickTimer"
        android:text="@string/notSet"
        app:layout_constraintEnd_toStartOf="@+id/quickTimer3"
        app:layout_constraintStart_toEndOf="@+id/quickTimer1"
        app:layout_constraintTop_toTopOf="@+id/quickTimer1" />

    <Button
        android:id="@+id/quickTimer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:onClick="clickQuickTimer"
        android:text="@string/notSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quickTimer2" />

</androidx.constraintlayout.widget.ConstraintLayout>